# TimeTable-Generator-v2

./: README.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: TimeTableGenerator.jsx  TimeTableGeneratorV2.jsx
server/: CMakeLists.txt  Dockerfile  convertExcelToJSON.py
server/src/: main.cpp
